# ultron-redmine

./: .dockerignore  .env.ci-test  .env.example  .gitignore  Dockerfile  LICENSE  LLM_PROVIDER_CHAIN_PLAN.md  README.md  config.example.yaml  config.yaml  docker-compose.ci.yml  docker-compose.hostnet.yml  docker-compose.yml  package-lock.json  plan.md  pyproject.toml
autoagents/: 001-redmine-reviewer.md  008-enhancement-reviewer.md  010-feature-coder.md  012-feature-coder-handoff.md  020-test.md  030-closing-reviewer.md  040-committer.md  TASKS-README.md  issue_checker_github.py  issue_checker_redmine.py  ultron-agent-loop.sh
docs/: OPERATIONS.md  RELEASE_CHECKLIST.md  USER_GUIDE.md  agent-loop.md
scripts/: enhancement-reviewer-preflight.sh  git-sync-main.sh  move-agent-task-to-done.sh  redmine-reviewer-preflight.sh  smoke_check.py  ultron-dump.sh
systemd/: ultron.service.example
tests/: test_amvara_executor.py  test_amvara_prefilter.py  test_amvara_registry.py  test_bot_instance_lock.py  test_ca_pi_no_aggressive_delete.py  test_config_llm_chain.py  test_discord_interaction_errors.py  test_discord_reply_context.py  test_doctor.py  test_environment_bindings.py  test_feedback.py  test_find_issue.py  test_llm_chain_display_model.py  test_llm_cursor_fallback.py  test_new_issues_config.py  test_new_ticket.py  test_nl_planner.py  test_nl_router.py  test_ollama_reachability.py  test_ollama_slash.py  test_pi_agent.py  test_redmine_http_hints.py  test_redmine_time_activity.py  test_report_schedule_config.py  test_report_schedule_weekly.py  test_rpsls.py  test_textutil.py  (+10 more)
(+89 files in other folders)
