[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ultron-bot"
version = "0.1.0"
description = "Discord bot connecting Redmine with OpenAI-compatible LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.1",
]

[project.scripts]
ultron = "ultron.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ultron*"]
